# volume-notifier

./: .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix  main.c  makefile
include/: app.h  notification.h  volume_listener.h
src/: main.c  notification.c  volume_listener.c
